<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="label_book">书名：</string>
    <string name="label_hint_book">请输入书名</string>
    <string name="label_writer">作者：</string>
    <string name="label_hint_writer">请输入作者姓名</string>
    <string name="label_hint_press">请输入出版社名称</string>
    <string name="label_press">出版社：</string>
    <string name="label_price">价格：</string>
    <string name="label_hint_price">请输入书籍价格</string>
    <string name="add">添加</string>
    <string name="del">删除</string>
    <string name="update">修改</string>
    <string name="search">查询</string>
</resources>