<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".RoomWriteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center|left"
            android:textSize="16sp"
            android:text="@string/label_book"
            android:layout_width="70dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/book_name"
            android:hint="@string/label_hint_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/label_hint_book"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center|left"
            android:textSize="16sp"
            android:text="@string/label_writer"
            android:layout_width="70dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/writer_name"
            android:hint="@string/label_hint_writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/label_hint_writer"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center|left"
            android:textSize="16sp"
            android:text="@string/label_press"
            android:layout_width="70dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/press_name"
            android:hint="@string/label_hint_press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/label_hint_press"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center|left"
            android:textSize="16sp"
            android:text="@string/label_price"
            android:layout_width="70dp"
            android:layout_height="40dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/book_price"
            android:hint="@string/label_hint_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/label_hint_price"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="16sp"
            android:id="@+id/bt_add"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/bt_del"
            android:text="@string/del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/bt_update"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/bt_search"
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>